--- a/List-2022.md
+++ b/List-2022.md
@@ -2,10 +2,20 @@
 
 ### Web Development
 ##### _HTML - CSS - JS_
+
+#### General
+- https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML
 - https://codepen.io/
 - https://greensock.com/
+- https://howdns.works/
+- https://www.codecademy.com/learn/deploy-a-website
+- 
+
+#### HTML
+- https://html.spec.whatwg.org/multipage/indices.html#element-content-categories
 - 
 
 ### App Development
 - https://cloud.google.com/appengine/
   - https://developer.mozilla.org/en-US/docs/Learn/Common_questions/How_do_you_host_your_website_on_Google_App_Engine
+  - 
